--- a/src/shared/components/NoContent/styles.css
+++ b/src/shared/components/NoContent/styles.css
@@ -1,11 +1,11 @@
 .root {
-  margin:10px
+  margin:30px 10px
 }
 
 .text {
   font-family:"Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans","arial";
-  font-size: 21px;
-  font-size: 2.1rem;
+  font-size: 16px;
+  font-size: 1.6rem;
   color: rgba(0,0,0,0.8);
   font-weight: 400;
   line-height: 1.58;
