--- a/src/shared/components/textEditors/shared/styles.css
+++ b/src/shared/components/textEditors/shared/styles.css
@@ -57,13 +57,11 @@
 
 
 .blockquote {
-  font-family: Georgia,Cambria,"Times New Roman",Times,serif;
-  font-size: 21px;
-  font-size: 2.1rem;
+  font-family: "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans","arial";
+  font-size: 16px;
+  font-size: 1.6rem;
   color: rgba(0,0,0,0.8);
   font-weight: 400;
-  line-height: 1.58;
-  letter-spacing: -.003em;
   margin:30px 0;
   padding: 20px;
   background: #f3f3f3;
@@ -72,52 +70,32 @@
 
 .caption {
   margin-bottom: 30px;
-  font-family: Georgia,Cambria,"Times New Roman",Times,serif;
-  font-size: 21px;
-  font-size: 2.1rem;
+  font-family: "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans","arial";
+  font-size: 16px;
+  font-size: 1.6rem;
   color: rgba(0,0,0,0.8);
   font-weight: 400;
-  line-height: 1.58;
-  letter-spacing: -.003em;
   margin-bottom:20px;
   padding-left: 20px;
   padding-bottom: 3px;
   border-left: 3px solid rgba(0,0,0,0.8);
 }
 
-.unorderedListItem {
-  font-family: Georgia,Cambria,"Times New Roman",Times,serif;
-  font-size: 21px;
-  font-size: 2.1rem;
+.unorderedListItem,.orderedListItem {
+  font-family: "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans","arial";
+  font-size: 16px;
+  font-size: 1.6rem;
   color: rgba(0,0,0,0.8);
   font-weight: 400;
-  line-height: 1.58;
-  letter-spacing: -.003em;
   margin-bottom:20px;
-
-  padding-left: 5px;
-}
-
-.orderedListItem {
-  font-family: Georgia,Cambria,"Times New Roman",Times,serif;
-  font-size: 21px;
-  font-size: 2.1rem;
-  color: rgba(0,0,0,0.8);
-  font-weight: 400;
-  line-height: 1.58;
-  letter-spacing: -.003em;
-  margin-bottom:20px;
-
   padding-left: 5px;
 }
 
 .urlInputBox {
-  font-family: Georgia,Cambria,"Times New Roman",Times,serif;
-  font-size: 21px;
-  font-size: 2.1rem;
+  font-family: "Microsoft Yahei", "Hiragino Sans GB", "Microsoft Sans Serif", "WenQuanYi Micro Hei", "sans","arial";
+  font-size: 16px;
+  font-size: 1.6rem;
   color: rgba(0,0,0,0.8);
   font-weight: 400;
-  line-height: 1.58;
-  letter-spacing: -.003em;
   margin-bottom: 10px;
 }
