--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>水墨小龙虾</title>
-    <link rel="stylesheet" href="/css/client/bundle.css">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="keywords" content="水墨小龙虾,smxlx,react,blog" />
+		<title>水墨小龙虾</title>
+		<link rel="stylesheet" href="/css/client/bundle.css">
   </head>
   <body>
     <div class="container">
