--- a/views/cms.ejs
+++ b/views/cms.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" content="水墨小龙虾,smxlx,react,blog" />
     <title>水墨小龙虾</title>
     <link rel="stylesheet" href="/css/cms/bundle.css">
   </head>
