--- a/src/shared/styles/index.global.css
+++ b/src/shared/styles/index.global.css
@@ -205,7 +205,8 @@ pre {
 
 code, kbd, pre, samp {
   font-family: "Source Code Pro",Consolas,Menlo,Monaco,"Courier New",monospace;
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 1.4;
   margin: 0;
 }
 
